tests/fixtures/errors/generic_unknown_arg.z
grab: function as { t: Any.generic } in { x: t } out t is {
    return x
}

main: function is {
    n: grab x: 5 bogus: 6
    s: "hi".string
    s.append nope: "x"
    print "\{n}"
}
